Use built-in features of o-ads to avoid page jumping while the ads are loading.

--- a/ads/main.scss
+++ b/ads/main.scss
@@ -6,8 +6,6 @@
 		padding: 10px 0;
 		line-height: 0;
 		background-color: oColorsGetPaletteColor('pink-tint3');
-		min-height: 90px;
-		transition: 0.3s ease all;
 	}
 }
 
@@ -55,6 +53,5 @@
 	height: 0;
 	min-height: 0;
 	padding: 0;
-	transition: 0.3s ease all;
 	overflow: hidden;
 }
